<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="nomFenomen">
        <item>Genèric</item>
        <item>Papallona</item>
        <item>Oreneta</item>
        <item>Ametller</item>
        <item>Cirerer</item>
    </string-array>
    <string name="app_name">Edumet</string>
    <string name="location_settings_inadequate_warning">S\'ha d\'activar la localització</string>
    <string name="permission_rationale">Es necesita el permís de localització</string>
    <string name="permission_denied_explanation">El permís de localització és necessari</string>
    <string name="settings">Ajustaments</string>
    <string name="msg_no_camera">No hi ha cap càmera instal·lada</string>
    <string name="encara_sense_lloc">No es pot localitzar la ubicació</string>
    <string name="dades_enviades">L\'observació s\'ha enviat correctament</string>
    <string name="error_connexio">S\'ha produït un error de connexió</string>
    <string name="fitxer_error">S\'ha produït un error en crear el fitxer</string>
    <string name="error_servidor">No s\'ha pogut enviar l\'observació</string>
    <string name="descriu">Descriu aquí les teves observacions</string>
    <string name="no_location_detected">Sense dades de localització</string>
    <string name="title_activity_maps">Edumet</string>
    <string name="contrasenya">contrasenya</string>
    <string name="usuari" translatable="false">usuari</string>
    <string name="identificat">Identifica\'t</string>
    <string name="entra">Entra</string>
    <string name="action_settings">Ajustaments de l\'App</string>
    <string name="action_favorite">Ubicació</string>
    <string name="servidor_no_disponible">No s\'ha pogut connectar amb el servidor</string>
    <string name="identificacio_incorrecta">Identificació incorrecta. Torna-ho a provar ...</string>
    <string name="observacions_baixades">S\'han baixat les teves observacions</string>
    <string name="edumet_web">EDUMET web</string>
    <string name="les_meves_observacions">Les meves observacions</string>
    <string name="la_meva_ubicacio">La meva ubicació</string>
    <string name="fotografia">Fes la fotografia</string>
    <string name="desa_observacio">Desa aquesta observació</string>
    <string name="envia_observacio">Envia aquesta observació</string>
    <string name="gira_imatge">Gira la fotografia</string>
    <string name="veure_mapa">Amplia el mapa</string>
    <string name="elimina">Elimina aquesta observació</string>
    <string name="mostra_imatge">Mostra la fotografia</string>
    <string name="sincronitza">Sincronitza amb el servidor</string>
    <string name="url_servidor">https://edumet.cat/edumet/meteo_proves/dades_recarregar.php</string>
    <string name="title_observacions">Observació</string>
    <string name="title_estacions">Estacions</string>
    <string name="title_radar">Radar</string>
    <string name="title_pronostic">Pronòstic</string>
    <string name="fix_settings">Els ajustos de localització no són els adients i no es poden canviar des d\'aquí. Canvia\'ls des dels ajustaments del sistema.</string>
    <string name="error_estacio_no_dades">L\'estació no proporciona les dades ...</string>
    <string name="error_estacio_no_respon">L\'estació no respon ...</string>
    <string name="ubicacio_actual">Ubicació actual</string>
</resources>
