<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/la_meva_ubicacio"
        android:title="@string/la_meva_ubicacio"
        app:showAsAction="never"/>
    <item android:id="@+id/les_meves_observacions"
        android:title="@string/les_meves_observacions"
        app:showAsAction="never"/>
    <item android:id="@+id/fotografia"
        android:title="@string/fotografia"
        app:showAsAction="never"/>
    <item android:id="@+id/gira_imatge"
        android:title="@string/gira_imatge"
        app:showAsAction="never"/>
    <item android:id="@+id/mostra_imatge"
        android:title="@string/mostra_imatge"
        app:showAsAction="never"/>
    <item android:id="@+id/edumet_web"
        android:title="@string/edumet_web"
        app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>